--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "react-redux-saga",
   "version": "0.1.0",
   "private": true,
+  "description": "react with redux and saga",
+  "homepage": "https://github.com/cherihung/react-ts-redux",
+  "author": {
+    "name": "Chienyi Cheri Hung",
+    "url": "https://www.cyh.io/"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "connected-react-router": "^4.4.1",
