--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "2.1.0",
     "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,8 +33,8 @@
     "serve:build": "serve -s build"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "eslint": "^5.4.0",
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^21.22.0",
@@ -43,5 +43,11 @@
     "redux-devtools": "^3.4.1",
     "redux-devtools-extension": "^2.13.5",
     "serve": "^10.0.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
